fix:layout mobile, z-index issues overflow menus, main nav rendering

--- a/Frontend/src/app/common/ui/main-nav/main-nav.component.scss
+++ b/Frontend/src/app/common/ui/main-nav/main-nav.component.scss
@@ -45,7 +45,7 @@ user-profile{
 
 .topBarSearch {
   flex: auto;
-  padding: 18px 20px 0 20px;
+  padding: 18px 20px 0 10px;
 }
 
 .menuButton .barIcon, .menuButton img {
@@ -318,6 +318,7 @@ user-profile{
 
   .menuButton {
     width: auto;
+    min-width: 65px;
     margin-bottom: 3px;
   }
 }
